--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "highlight": "^0.2.4",
     "jsonwebtoken": "^8.5.1",
+    "marked": "^2.0.0",
     "mysql": "^2.18.1",
     "node-uuid": "^1.4.8",
     "nodemon": "^2.0.7"
